--- a/public/assets/sass/layout/_sidebar-left.scss
+++ b/public/assets/sass/layout/_sidebar-left.scss
@@ -1,17 +1,17 @@
-main .sidebar-left form {
-	margin-bottom:20px;
-	padding:30px;
-	background:#eaeaea;
-	border:1px solid #ccc;
-  }
-
-main .sidebar-left form input {
-	width:100%;
-	margin-bottom:10px;
+main .sidebar-left {
+	form {
+		margin-bottom:20px;
+		padding:30px;
+		background:#eaeaea;
+		border:1px solid #ccc;
 	}
-
-main .sidebar-left .welcome-message {
-	padding:30px;
-	background:#eaeaea;
-	border:1px solid #ccc;
+	input {
+		width:100%;
+		margin-bottom:10px;
 	}
+	.welcome-message {
+		padding:30px;
+		background:#eaeaea;
+		border:1px solid #ccc;
+	}
+}
