--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5829,7 +5829,8 @@ main h1 {
   padding-bottom: 24px;
   margin: 0;
   color: #4A4A4A;
-  font-size: 22px;  }
+  font-size: 22px;
+  font-weight: 600; }
 
 main .msg-center {
   display: none;  }
@@ -5911,7 +5912,7 @@ main .main-content .registrants-list {
 
 @media (min-width:450px) {
   .registrants-list li {
-    padding: 19px;
+    padding: 15px;
   }
 }
 
@@ -5919,11 +5920,13 @@ main .main-content .registrants-list {
   color: #B6B6B6; }
 
 .registrants-list li .guest-name {
-  margin-left: 10px;  }
+  margin-left: 10px;
+  margin-right: 2px;  }
 
 @media (min-width:450px) {
   .registrants-list li .guest-name {
     margin-left: 20px;
+    margin-right: 5px;
   }
 }
 
