--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5819,8 +5819,7 @@ header h1 {
   margin: 0;
   color: white;
   text-transform: uppercase;
-  font-size: 22px;
-  font-weight: 200; }
+  font-size: 22px; }
 
 main {
   padding: 100px 0; }
@@ -5906,7 +5905,7 @@ main .main-content .registrants-list {
   color: #7D7D7D;
   border: 1px solid #C3C3C3;
   padding: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   display: flex;
   flex-wrap: wrap;  }
 
